k8s-files/ingress/ingress-https.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  tls:
    - hosts:
        - "dashboard.com"
      secretName: test-secret-tls
  rules:
    - host: "dashboard.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 80
