k8s-files/ingress/ingress-multi-path.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-example
spec:
  rules:
    - host: www.test.com
      http:
        paths:
          - path: /foo # it will be routed here if users hits www.test.com/foo
            pathType: Prefix
            backend:
              service:
                name: service1
                port:
                  number: 4200
          - path: /bar # it will be routed here if users hits www.test.com/bar
            pathType: Prefix
            backend:
              service:
                name: service2
                port:
                  number: 8080
